--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "main": "index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "dev": "nodemon ./app/index.ts"
+      "dev": "nodemon index.ts"
    },
    "keywords": [],
    "author": "",
@@ -13,12 +13,18 @@
    "dependencies": {
       "cors": "^2.8.5",
       "dotenv": "^16.4.5",
-      "express": "^4.19.2"
+      "express": "^4.19.2",
+      "multer": "^1.4.5-lts.1",
+      "openai": "^4.55.5",
+      "swagger-jsdoc": "^6.2.8",
+      "swagger-ui-express": "^5.0.1"
    },
    "devDependencies": {
       "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
       "@types/node": "^22.2.0",
+      "@types/swagger-jsdoc": "^6.0.4",
+      "@types/swagger-ui-express": "^4.1.6",
       "nodemon": "^3.1.4",
       "ts-node": "^10.9.2",
       "typescript": "^5.5.4"
